[gd_scene load_steps=13 format=3 uid="uid://dbkp41oxg03o6"]

[ext_resource type="Script" path="res://lib/overhead_car_2d/overhead_car_body_2d.gd" id="1_ibwir"]
[ext_resource type="Texture2D" uid="uid://dthtmohgw8u1f" path="res://scene/car/audi/Audi.png" id="2_33x0l"]
[ext_resource type="Texture2D" uid="uid://bwgjsd327ch8p" path="res://scene/car/audi/char_audi.png" id="2_au1uh"]
[ext_resource type="PackedScene" uid="uid://cl3halv7uu2tw" path="res://scene/player/controller/playerCarController.tscn" id="2_idgy8"]
[ext_resource type="AudioStream" uid="uid://dahxhxgy1qfrn" path="res://sound/fx/engine/rally-car2.mp3" id="3_hfwa2"]
[ext_resource type="AudioStream" uid="uid://dd240qte30ido" path="res://sound/fx/tires_squal_loop.wav" id="4_jbkbo"]
[ext_resource type="AudioStream" uid="uid://dlbojdancbkl3" path="res://sound/fx/crash-6711.mp3" id="5_pn0ef"]
[ext_resource type="PackedScene" uid="uid://551dlp73phd4" path="res://texture/animation/smoke.tscn" id="6_ynfn4"]
[ext_resource type="AudioStream" uid="uid://tuaawqdwftov" path="res://sound/fx/car-damage1.mp3" id="8_qq4uq"]
[ext_resource type="Texture2D" uid="uid://d2weeqgpbqllf" path="res://sound/fx/triangle.png" id="10_b7mu1"]
[ext_resource type="Texture2D" uid="uid://ltiunalnocyg" path="res://scene/car/sedan/sedan0.png" id="11_lwi02"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f6v2r"]
size = Vector2(212, 95)

[node name="Car" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_ibwir")
profilePic = ExtResource("2_au1uh")
engineNoise = ExtResource("3_hfwa2")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="CarController" parent="." instance=ExtResource("2_idgy8")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, -2.5)
shape = SubResource("RectangleShape2D_f6v2r")

[node name="Line2D" type="Line2D" parent="."]

[node name="sprite" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_33x0l")

[node name="tireLocation" type="Node2D" parent="sprite"]
position = Vector2(35, 70)
rotation = -1.57652

[node name="tireLocation2" type="Node2D" parent="sprite"]
position = Vector2(-35, 70)
rotation = -1.57652

[node name="tireLocation3" type="Node2D" parent="sprite"]
position = Vector2(35, -70)
rotation = -1.5708

[node name="tireLocation4" type="Node2D" parent="sprite"]
position = Vector2(-35, -70)
rotation = -1.57652

[node name="exhaust" type="Node2D" parent="sprite"]

[node name="Smoke" parent="sprite/exhaust" instance=ExtResource("6_ynfn4")]
position = Vector2(24.0004, 109)

[node name="AudioStream-Engine" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hfwa2")
volume_db = 2.0

[node name="AudioStream-Tires" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_jbkbo")

[node name="AudioStream-Crash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_pn0ef")

[node name="AudioStream-Voice" type="AudioStreamPlayer" parent="."]
volume_db = 4.0

[node name="AudioStream-CarDamage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_qq4uq")
volume_db = -5.0
pitch_scale = 2.0

[node name="headlamps" type="Node2D" parent="."]
visible = false

[node name="headlamp1" type="PointLight2D" parent="headlamps"]
modulate = Color(100, 100, 100, 0.784314)
z_index = -1
position = Vector2(85, -32)
rotation = -1.5708
scale = Vector2(4, 35)
color = Color(1, 1, 1, 0.47451)
energy = 0.6
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.0980392)
texture = ExtResource("10_b7mu1")
offset = Vector2(0, 54)

[node name="headlamp2" type="PointLight2D" parent="headlamps"]
modulate = Color(100, 100, 100, 0.784314)
z_index = -1
position = Vector2(85, 32)
rotation = -1.5708
scale = Vector2(4, 35)
color = Color(1, 1, 1, 0.47451)
energy = 0.6
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.0980392)
texture = ExtResource("10_b7mu1")
offset = Vector2(0, 54)

[node name="headlamp3" type="PointLight2D" parent="headlamps"]
modulate = Color(100, 100, 100, 0.392157)
z_index = -1
position = Vector2(85, -32)
rotation = -1.5708
scale = Vector2(18, 35)
color = Color(1, 1, 1, 0.47451)
energy = 0.3
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.0980392)
texture = ExtResource("10_b7mu1")
offset = Vector2(0, 54)

[node name="headlamp4" type="PointLight2D" parent="headlamps"]
modulate = Color(100, 100, 100, 0.392157)
z_index = -1
position = Vector2(85, 32)
rotation = -1.5708
scale = Vector2(18, 35)
color = Color(1, 1, 1, 0.47451)
energy = 0.3
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.0980392)
texture = ExtResource("10_b7mu1")
offset = Vector2(0, 54)

[node name="headlamp5" type="PointLight2D" parent="headlamps"]
modulate = Color(100, 100, 100, 0.392157)
z_index = -1
position = Vector2(39.576, 32)
rotation = -1.5708
scale = Vector2(60, 20)
color = Color(1, 1, 1, 0.47451)
energy = 0.3
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.0980392)
texture = ExtResource("10_b7mu1")
offset = Vector2(0, 54)

[node name="carhighlight" type="PointLight2D" parent="headlamps"]
rotation = 1.5708
energy = 0.8
texture = ExtResource("11_lwi02")
